# ToDoList

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/cpp/: addtaskdialog.cpp  databasemanager.cpp  finddialog.cpp  mainwindow.cpp  tasksqlmodel.cpp
src/forms/: addtaskdialog.ui  finddialog.ui  mainwindow.ui
src/headers/: addtaskdialog.h  databasemanager.h  finddialog.h  mainwindow.h  tasksqlmodel.h
